# FIT-VUT

./: LICENSE  README.md
IZG/: CMakeLists.txt
IZG/1project/: Doxyfile
IZG/1project/doc/html/: annotated.html  bunny_8c.html  bunny_8h.html  camera_8c.html  cpu_8c.html  cpu_8h.html  cpu_8h_source.html  dir_1fe2e3f40887fbec9fd2493c34e7d145.html  dir_5af946dc53da9c500339702c4e564dc7.html  dir_5c60f3e8c3954d5c5c5ecd5ca790863c.html  dir_821be63df25109e5eb77dd0f2b80706a.html  files.html  functions_vars.html  globals.html  globals_b.html  globals_defs.html  globals_e.html  globals_enum.html  globals_eval.html  globals_f.html  globals_func.html  globals_func_f.html  globals_func_g.html  globals_func_i.html  globals_func_l.html  globals_func_n.html  globals_func_p.html  globals_func_q.html  globals_func_s.html  globals_func_v.html  globals_g.html  globals_i.html  globals_l.html  globals_m.html  globals_n.html  globals_o.html  globals_r.html  globals_v.html  globals_vars.html  globals_z.html  (+46 more)
IZG/1project/doc/latex/: annotated.tex  camera_8c.tex  dir_5af946dc53da9c500339702c4e564dc7.tex  dir_5c60f3e8c3954d5c5c5ecd5ca790863c.tex  dir_7f90c3d965de0e82fe4c04904f65e6da.tex  dir_a5212ee8b6a8d592d027941e58e3651c.tex  dir_ab51a11a65415835ab0b627ec1ba1885.tex  gpu_8c.tex  gpu_8h.tex  group__cpu__side.tex  group__gpu__side.tex  index.tex  linearAlgebra_8c.tex  linearAlgebra_8h.tex  modules.tex  (+30 more)
IZG/1project/stack/: CMakeLists.txt
IZG/1project/student/: callbackAndData.c  callbackAndData.h  camera.h  cpu.h  drawPoints.cpp  emptyMethod.c  main.c  method.c  parseArguments.c  parseArguments.h  phongMethod.h  pointBoxMethod.c  pointBoxMethod.h  pointCircleMethod.c  pointMethod.h  pointSquareMethod.h  triangle3DMethod.c  triangle3DMethod.h  window.h
IZG/1project/tests/: conformanceTests.cpp  groundTruth.h  takeScreenShot.cpp  takeScreenShot.h  tests.cpp
IZG/doc/html/: application_8h_source.html  bunny_8h_source.html  callbackAndData_8h_source.html  camera_8h.html  camera_8h_source.html  classes.html  dir_61f884239e7b9d662572355c29328680.html  dir_7f90c3d965de0e82fe4c04904f65e6da.html  dir_a5212ee8b6a8d592d027941e58e3651c.html  dir_ab51a11a65415835ab0b627ec1ba1885.html  dir_df997ef5cbe81af8266600b381d65502.html  dir_e311e002a24b0cb5a76159e0ee0c544b.html  emptyMethod_8h_source.html  functions.html  globals_8c.html  globals_8h.html  globals_8h_source.html  globals_c.html  globals_d.html  globals_func_c.html  globals_func_d.html  globals_func_m.html  globals_func_r.html  globals_func_t.html  globals_func_z.html  globals_p.html  globals_q.html  globals_s.html  globals_t.html  globals_type.html  globals_u.html  gpu_8c.html  group__gpu__side.html  group__shader__side.html  index.html  linearAlgebra_8h_source.html  method_8h_source.html  modules.html  parseArguments_8h_source.html  pointMethod_8h_source.html  (+28 more)
IZG/doc/latex/: bunny_8c.tex  bunny_8h.tex  camera_8h.tex  cpu_8c.tex  cpu_8h.tex  dir_1fe2e3f40887fbec9fd2493c34e7d145.tex  dir_61f884239e7b9d662572355c29328680.tex  dir_821be63df25109e5eb77dd0f2b80706a.tex  dir_df997ef5cbe81af8266600b381d65502.tex  dir_e311e002a24b0cb5a76159e0ee0c544b.tex  files.tex  globals_8c.tex  globals_8h.tex  group__shader__side.tex  queue_2src_2queue_2fwd_8h.tex  queue_8c.tex  refman.tex  structAppData.tex  structBunnyVertex.tex  structGPU.tex  structGPUBuffer.tex  structGPUFramebuffer.tex  structGPUIndices.tex  structGPUOutFragment.tex  structGPUProgram.tex  structGPUPrograms.tex  structGPUVertexPuller.tex  structMethod.tex  structPointBoxData.tex  structPointSquareData.tex  structPrimitive.tex  structQueue.tex  structTriangleData.tex  structVec3.tex  student_2fwd_8h.tex  vector_8c.tex  vector_8h.tex
IZG/errorCodes/: CMakeLists.txt
IZG/queue/: CMakeLists.txt
IZG/queue/tests/: CMakeLists.txt
IZG/student/: application.c  application.h  bunny.h  cpu.c  drawTriangles.cpp  emptyMethod.h  fwd.h  globals.c  globals.h  gpu.c  gpu.h  method.h  phongMethod.c  pointCircleMethod.h  pointMethod.c  pointSquareMethod.c  structures.h  triangleMethod.c  triangleMethod.h  window.c
IZG/tests/: conformanceTests.h  groundTruth.c  performanceTest.cpp
IZG/vector/: CMakeLists.txt
IZG/vector/tests/: tests.cpp
PRL/2proj/: CMakeLists.txt  main.cpp.old  numbers  prep.sh  slides  test.sh  vid  vid.cpp  vid.docx  vid_test.py
(+1091 files in other folders)
